--- a/CSS/style.CSS
+++ b/CSS/style.CSS
@@ -69,6 +69,9 @@ h6{
     line-height: 25px;
     margin-top: 25px;
 }
+a {
+    text-decoration: none;
+}
 /*---progress bar---*/
 .process-wrapper{
     margin: auto;
